--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "movie_app_23_11_06",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.themoviedb.org",
   "dependencies": {
+    "@tanstack/react-query": "^5.7.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
